--- a/Apartrent_Try1/Apartrent_Try1/wwwroot/editAccount.html
+++ b/Apartrent_Try1/Apartrent_Try1/wwwroot/editAccount.html
@@ -6,6 +6,7 @@
             <a id="selected ">Edit account</a>
             <a>My Reviews</a>
             <a>History of purchses</a>
+            <a ng-click="deleteUser()">Delete User</a>
         </div>
         <div class="userProfileContent">
             <br /><h1>Edit your Account </h1>
@@ -31,10 +32,11 @@
             <br />
             <a>save spot for image<img /></a>
             <a id="selectedSomthing">Edit account</a>
-            <a>Edit apartment</a> <!--will add div that shows all apartments of current user the chosen one will be edited-->
+            <a>My apartments</a> <!--will add div that shows all apartments of current user the chosen one will be edited-->
             <a>My Reviews</a>
             <a>Reviews on my apartments</a>
             <a>History of purchses</a>
+            <button ng-click="$parent.deleteUser()">Delete User</button>
         </div>
         <div class="renterProfileContent">
             <br /><h1>Edit your Account </h1>
