--- a/Apartrent_Try1/Apartrent_Try1/wwwroot/userApartments.html
+++ b/Apartrent_Try1/Apartrent_Try1/wwwroot/userApartments.html
@@ -21,10 +21,19 @@
         </div>
         <div>
             <div class="renterProfileContent" ng-repeat="apartment in userDetails.renterApartments">
-                <p>{{countries[apartment.countryID-1].countryName}}</p>
-                <p>{{apartment.address}}</p>
-                <p>{{apartment.availableFromDate}}</p>
-                <br />
+                <div>
+                    <div>
+                        <p>{{countries[apartment.countryID-1].countryName}}</p>
+                        <p>{{apartment.address}}</p>
+                        <p>{{apartment.apartmentType}}</p>
+                        <p>{{apartment.fromDate}}</p>
+                        <p>{{apartment.toDate}}</p>
+                        <p>{{apartment.pricePerDay}}</p>
+                    </div>
+                    <button onclick="alert()">Edit Apartment</button>
+                    <button>Delete Apartment</button>
+                </div>
+                   
             </div>
         </div>
     </div>
