--- a/Apartrent_Try1/Apartrent_Try1/wwwroot/UserDashBoard/becomeRenter.html
+++ b/Apartrent_Try1/Apartrent_Try1/wwwroot/UserDashBoard/becomeRenter.html
@@ -4,8 +4,8 @@
             <br />
             <a>save spot for image<img /></a>
             <a ng-href="#!yourProfile/{{userDetails.userName}}/editAccount.html">Edit account</a>
-            <a>My Reviews</a>
-            <a>History of purchses</a>
+            <a ng-href="#!yourProfile/{{userDetails.userName}}/myReviews.html">My Reviews</a>
+            <a ng-href="#!yourProfile/{{userDetails.userName}}/myOrders.html">History of purchses</a>
         </div>
         <div class="renterProfileContent">
             User Name: <input type="text" />
@@ -19,10 +19,10 @@
             <br />
             <a>save spot for image<img /></a>
             <a ng-href="#!yourProfile/{{userDetails.userName}}/editAccount.html">Edit account</a>
-            <a>My apartments</a> <!--will add div that shows all apartments of current user the chosen one will be edited-->
-            <a>My Reviews</a>
-            <a>Reviews on my apartments</a>
-            <a>History of purchses</a>
+            <a ng-href="#!yourProfile/{{userDetails.userName}}/userApartments.html">My apartments</a>
+            <a ng-href="#!yourProfile/{{userDetails.userName}}/myReviews.html">My Reviews</a>
+            <a ng-href="#!yourProfile/{{userDetails.userName}}/apartmentReviews.html">Reviews on my apartments</a>
+            <a ng-href="#!yourProfile/{{userDetails.userName}}/myOrders.html">History of purchses</a>
         </div>
         <h1>Youre a renter</h1>
         <a ng-href="/index.html">Go Back</a>
