--- a/Apartrent_Try1/Apartrent_Try1/wwwroot/RenterDashBoard/addApartment.html
+++ b/Apartrent_Try1/Apartrent_Try1/wwwroot/RenterDashBoard/addApartment.html
@@ -2,12 +2,11 @@
     <div ng-switch-when="1">
         <div class="userSideBar">
             <br />
-            <a>save spot for image<img /></a>
             <a ng-href="#!yourProfile/{{userDetails.userName}}/editAccount.html">Edit account</a>
-            <a>My apartments</a> <!--will add div that shows all apartments of current user the chosen one will be edited-->
-            <a>My Reviews</a>
-            <a>Reviews on my apartments</a>
-            <a>History of purchses</a>
+            <a ng-href="#!yourProfile/{{userDetails.userName}}/userApartments.html">My apartments</a>
+            <a ng-href="#!yourProfile/{{userDetails.userName}}/myReviews.html">My Reviews</a>
+            <a ng-href="#!yourProfile/{{userDetails.userName}}/apartmentReviews.html">Reviews on my apartments</a>
+            <a ng-href="#!yourProfile/{{userDetails.userName}}/myOrders.html">History of purchses</a>
         </div>
         <div class="renterProfileContent">
             Select Apartment Category:<select ng-model="$parent.categoryID">
@@ -54,16 +53,16 @@
                 Sofa Bed: <input min="0" placeholder="0" ng-model="$parent.sofaBed" type="number" />
                 Beds Description: <textarea ng-model="$parent.bedsDescription"></textarea>
             </div>
-            <a ng-href="#!yourProfile/{{userDetails.userName}}/yourApartments.html" ng-click="addApartment()">Send</a>
+            <a ng-href="#!yourProfile/{{userDetails.userName}}/userApartments.html" ng-click="addApartment()">Send</a>
         </div>
     </div>
     <div ng-switch-when="0">
         <div class="userSideBar">
             <br />
             <a>save spot for image<img /></a>
-            <a id="selected ">Edit account</a>
-            <a>My Reviews</a>
-            <a>History of purchses</a>
+            <a ng-href="#!yourProfile/{{userDetails.userName}}/editAccount.html">Edit account</a>
+            <a ng-href="#!yourProfile/{{userDetails.userName}}/myReviews.html">My Reviews</a>
+            <a ng-href="#!yourProfile/{{userDetails.userName}}/myOrders.html">History of purchses</a>
         </div>
         <div class="userProfileContent">
             Select Apartment Category:<select ng-model="$parent.categoryID">
