--- a/Apartrent_Try1/Apartrent_Try1/wwwroot/UserDashBoard/editAccount.html
+++ b/Apartrent_Try1/Apartrent_Try1/wwwroot/UserDashBoard/editAccount.html
@@ -2,11 +2,10 @@
     <div ng-switch-when="0">
         <div class="userSideBar">
             <br />
-            <a>save spot for image<img /></a>
-            <a id="selected ">Edit account</a>
-            <a>My Reviews</a>
-            <a>History of purchses</a>
-            <a ng-click="deleteUser()">Delete User</a>
+            <a ng-href="#!yourProfile/{{userDetails.userName}}/editAccount.html">Edit account</a>
+            <a ng-href="#!yourProfile/{{userDetails.userName}}/myReviews.html">My Reviews</a>
+            <a ng-href="#!yourProfile/{{userDetails.userName}}/myOrders.html">History of purchses</a>
+            <a ng-href="/index.html"><span ng-click="deleteUser()">Delete User</span></a>
         </div>
         <div class="userProfileContent">
             <br /><h1>Edit your Account </h1>
@@ -31,12 +30,14 @@
         <div class="renterSideBar">
             <br />
             <a>save spot for image<img /></a>
-            <a id="selectedSomthing">Edit account</a>
-            <a>My apartments</a> <!--will add div that shows all apartments of current user the chosen one will be edited-->
-            <a>My Reviews</a>
-            <a>Reviews on my apartments</a>
-            <a>History of purchses</a>
-            <button ng-click="$parent.deleteUser()">Delete User</button>
+            <a ng-href="#!yourProfile/{{userDetails.userName}}/editAccount.html">Edit account</a>
+            <a ng-href="#!yourProfile/{{userDetails.userName}}/userApartments.html">My apartments</a>
+            <a ng-href="#!yourProfile/{{userDetails.userName}}/myReviews.html">My Reviews</a>
+            <a ng-href="#!yourProfile/{{userDetails.userName}}/apartmentReviews.html">Reviews on my apartments</a>
+            <a ng-href="#!yourProfile/{{userDetails.userName}}/myOrders.html">History of purchses</a>
+            <a ng-href="/index.html"><span ng-click="deleteUser()">Delete User</span></a>
+            <a ng-href="/index.html"><span ng-click="deleteRenterStatus()">Stop being a renter</span></a>
+
         </div>
         <div class="renterProfileContent">
             <br /><h1>Edit your Account </h1>
