--- a/Apartrent_Try1/Apartrent_Try1/wwwroot/viewApartment.html
+++ b/Apartrent_Try1/Apartrent_Try1/wwwroot/viewApartment.html
@@ -12,9 +12,9 @@
     <p>
         {{currentApartmentData.pricePerDay}}
     </p>
-        <div><p>Price for all days:{{currentApartmentData.priceForStaying}}</p></div>
-        <div><p>Price Per Day:{{currentApartmentData.pricePerDay}}</p></div>
-        <div><p>Price per guest{{currentApartmentData.pricePerGuest}}</p></div>
+    <div><p>Price for all days:{{currentApartmentData.priceForStaying}}</p></div>
+    <div><p>Price Per Day:{{currentApartmentData.pricePerDay}}</p></div>
+    <div><p>Price per guest{{currentApartmentData.pricePerGuest}}</p></div>
 
 
     <p>
@@ -56,18 +56,37 @@
     <p>{{currentApartmentData.bedsDescription}}</p>
 </div>
 
-    <p>
-        <div ng-if="userDetails ">
-            <h3>place a review(for your notice reviews will be post only if you have purches a stay in this currentApartmentData. you can review the renter before staying and then write your full review :D)</h3>
-            <textarea ng-model="$parent.reviewDescription" placeholder="Type your review here"></textarea>
-            <input type="range" min="1" max="5" ng-model="$parent.reviewRating" />
-            <button ng-click="newReview()">send</button>
-        </div>
-    </p>
 
-    <h3>Reviews:</h3>
-    <div ng-repeat="review in currentApartmentData.reviews">
+<div ng-if="userDetails">
+    <h3>place a review(for your notice reviews will be post only if you have purches a stay in this currentApartmentData. you can review the renter before staying and then write your full review :D)</h3>
+    <textarea ng-model="$parent.reviewDescription" placeholder="Type your review here"></textarea>
+    <input type="range" min="1" max="5" ng-model="$parent.reviewRating" />
+    <button ng-click="newReview()">Send Review</button>
+</div>
+
+
+<h3>Reviews:</h3>
+<div  ng-repeat="review in currentApartmentData.reviews track by $index">
+    <div ng-if="review.userName != userDetails.userName">
         {{review.userName}}
         {{review.description}}
         {{review.rating}}
     </div>
+
+    <div ng-if="review.userName == userDetails.userName">
+        <div ng-show="currentReview != $index">
+            {{review.userName}}
+            {{review.description}}
+            {{review.rating}}
+            <button ng-click="editReviewHandler($index)">Edit Review</button>
+            <button ng-click="deleteReview(review,$index)">Delete Review</button>
+        </div>
+        <div ng-show="currentReview == $index">
+            <textarea placeholder="{{review.description}}" ng-model="$parent.$parent.editDescription"></textarea>
+            <input type="range" min="1" max="5" ng-model="$parent.$parent.editRating" />
+            <button ng-click="editReview(review,$index)">Send Review</button>
+            <button ng-click="deleteReview(review,$index)">Delete Review</button>
+        </div>
+    </div>
+    <br />
+</div>
