--- a/Apartrent_Try1/Apartrent_Try1/wwwroot/UserDashBoard/editAccount.html
+++ b/Apartrent_Try1/Apartrent_Try1/wwwroot/UserDashBoard/editAccount.html
@@ -3,7 +3,7 @@
         <div class="userSideBar">
             <br />
             <a ng-href="#!yourProfile/{{userDetails.userName}}/editAccount.html">Edit account</a>
-            <a ng-href="#!yourProfile/{{userDetails.userName}}/myReviews.html">My Reviews</a>
+            <a ng-click="getUserReviews()"  ng-href="#!yourProfile/{{userDetails.userName}}/myReviews.html">My Reviews</a>
             <a ng-href="#!yourProfile/{{userDetails.userName}}/myOrders.html">History of purchses</a>
             <a ng-href="/index.html"><span ng-click="deleteUser()">Delete User</span></a>
         </div>
@@ -32,8 +32,7 @@
             <a>save spot for image<img /></a>
             <a ng-href="#!yourProfile/{{userDetails.userName}}/editAccount.html">Edit account</a>
             <a ng-href="#!yourProfile/{{userDetails.userName}}/userApartments.html">My apartments</a>
-            <a ng-href="#!yourProfile/{{userDetails.userName}}/myReviews.html">My Reviews</a>
-            <a ng-href="#!yourProfile/{{userDetails.userName}}/apartmentReviews.html">Reviews on my apartments</a>
+            <a ng-click="getUserReviews()"  ng-href="#!yourProfile/{{userDetails.userName}}/myReviews.html">My Reviews</a>
             <a ng-href="#!yourProfile/{{userDetails.userName}}/myOrders.html">History of purchses</a>
             <a ng-href="/index.html"><span ng-click="deleteUser()">Delete User</span></a>
             <a ng-href="/index.html"><span ng-click="deleteRenterStatus()">Stop being a renter</span></a>
