--- a/Apartrent_Try1/Apartrent_Try1/wwwroot/RenterDashBoard/userApartments.html
+++ b/Apartrent_Try1/Apartrent_Try1/wwwroot/RenterDashBoard/userApartments.html
@@ -4,7 +4,7 @@
             <br />
             <a>save spot for image<img /></a>
             <a ng-href="#!yourProfile/{{userDetails.userName}}/editAccount.html">Edit account</a>
-            <a ng-href="#!yourProfile/{{userDetails.userName}}/myReviews.html">My Reviews</a>
+            <a ng-click="getUserReviews()" ng-href="#!yourProfile/{{userDetails.userName}}/myReviews.html">My Reviews</a>
             <a ng-href="#!yourProfile/{{userDetails.userName}}/myOrders.html">History of purchses</a>
         </div>
         <a ng-href="#!index.html">Error Go Back</a>
@@ -15,26 +15,26 @@
             <a>save spot for image<img /></a>
             <a ng-href="#!yourProfile/{{userDetails.userName}}/editAccount.html">Edit account</a>
             <a ng-href="#!yourProfile/{{userDetails.userName}}/userApartments.html">My apartments</a>
-            <a ng-href="#!yourProfile/{{userDetails.userName}}/myReviews.html">My Reviews</a>
-            <a ng-href="#!yourProfile/{{userDetails.userName}}/apartmentReviews.html">Reviews on my apartments</a>
+            <a ng-click="getUserReviews()" ng-href="#!yourProfile/{{userDetails.userName}}/myReviews.html">My Reviews</a>
             <a ng-href="#!yourProfile/{{userDetails.userName}}/myOrders.html">History of purchses</a>
         </div>
         <div>
             <div class="renterProfileContent" ng-repeat="apartment in userDetails.renterApartments track by $index">
                 <div>
                     <div>
-                        <p>{{countries[apartment.countryID-1].countryName}}</p>
-                        <p>{{apartment.address}}</p>
-                        <p>{{apartment.apartmentType}}</p>
-                        <p>{{apartment.fromDate}}</p>
-                        <p>{{apartment.toDate}}</p>
-                        <p>{{apartment.pricePerDay}}</p>
+                        <a ng-click="getApartment(apartment)" ng-href="#!yourProfile/{{userDetails.userName}}/viewUserApartment.html">
+                            <p>{{countries[apartment.countryID-1].countryName}}</p>
+                            <p>{{apartment.address}}</p>
+                            <p>{{apartment.apartmentType}}</p>
+                            <p>{{apartment.fromDate}}</p>
+                            <p>{{apartment.toDate}}</p>
+                            <p>{{apartment.pricePerDay}}</p>
+                        </a><br />
                         <a ng-click="getIndex($index)" ng-href="#!yourProfile/{{userDetails.userName}}/editApartment.html">Edit Apartment</a>
+                        <button ng-click="deleteApartment($index , apartment.apartmentID)">Delete Apartment</button>
                     </div>
-                    <button onclick="alert()">Edit Apartment</button>
-                    <button ng-click="deleteApartment($index , apartment.apartmentID)">Delete Apartment</button>
                 </div>
-                   
+
             </div>
         </div>
     </div>
