--- a/Apartrent_Try1/Apartrent_Try1/wwwroot/UserDashBoard/becomeRenter.html
+++ b/Apartrent_Try1/Apartrent_Try1/wwwroot/UserDashBoard/becomeRenter.html
@@ -4,7 +4,7 @@
             <br />
             <a>save spot for image<img /></a>
             <a ng-href="#!yourProfile/{{userDetails.userName}}/editAccount.html">Edit account</a>
-            <a ng-href="#!yourProfile/{{userDetails.userName}}/myReviews.html">My Reviews</a>
+            <a ng-click="getUserReviews()"  ng-href="#!yourProfile/{{userDetails.userName}}/myReviews.html">My Reviews</a>
             <a ng-href="#!yourProfile/{{userDetails.userName}}/myOrders.html">History of purchses</a>
         </div>
         <div class="renterProfileContent">
@@ -20,8 +20,7 @@
             <a>save spot for image<img /></a>
             <a ng-href="#!yourProfile/{{userDetails.userName}}/editAccount.html">Edit account</a>
             <a ng-href="#!yourProfile/{{userDetails.userName}}/userApartments.html">My apartments</a>
-            <a ng-href="#!yourProfile/{{userDetails.userName}}/myReviews.html">My Reviews</a>
-            <a ng-href="#!yourProfile/{{userDetails.userName}}/apartmentReviews.html">Reviews on my apartments</a>
+            <a ng-click="getUserReviews()"  ng-href="#!yourProfile/{{userDetails.userName}}/myReviews.html">My Reviews</a>
             <a ng-href="#!yourProfile/{{userDetails.userName}}/myOrders.html">History of purchses</a>
         </div>
         <h1>Youre a renter</h1>
