--- a/Apartrent_Try1/Apartrent_Try1/wwwroot/UserDashBoard/myReviews.html
+++ b/Apartrent_Try1/Apartrent_Try1/wwwroot/UserDashBoard/myReviews.html
@@ -7,7 +7,7 @@
             <a ng-href="#!yourProfile/{{userDetails.userName}}/myReviews.html">My Reviews</a>
             <a ng-href="#!yourProfile/{{userDetails.userName}}/myOrders.html">History of purchses</a>
         </div>
-        <div class="userSideBar">
+        <div class="userProfileContent">
             <div ng-repeat="review in userDetails.reviews">
                 <div ng-show="currentReview != $index">
                     {{review.description}}
