--- a/Apartrent_Try1/Apartrent_Try1/wwwroot/UserDashBoard/yourProfile.html
+++ b/Apartrent_Try1/Apartrent_Try1/wwwroot/UserDashBoard/yourProfile.html
@@ -4,8 +4,8 @@
             <br />
             <a>save spot for image<img /></a>
             <a ng-href="#!yourProfile/{{userDetails.userName}}/editAccount.html">Edit account</a>
-            <a ng-href="#!yourProfile/{{userDetails.userName}}/myReviews.html">My Reviews</a>
-            <a ng-click="getUserOrders()" ng-href="#!yourProfile/{{userDetails.userName}}/myOrders.html">History of purchses</a>
+            <a ng-click="getUserReviews()" ng-href="#!yourProfile/{{userDetails.userName}}/myReviews.html">My Reviews</a>
+            <a ng-click="getUserOrders()" ng-href="#!yourProfile/{{userDetails.userName}}/myOrders.html">View purchses</a>
         </div>
 
     </div>
